# Spectra

./: .gitignore  README.md
.github/workflows/: build-contract.yml
agent/: .env.example  index.js  package-lock.json  package.json
contracts/agent-registry/: .dockerignore  Cargo.toml  Dockerfile  generate-keys.mjs  rust-toolchain.toml
contracts/agent-registry/client/: .env.example  common.mjs  generate-keys.mjs  get-agent.mjs  install.mjs  package-lock.json  package.json  register-agent.mjs
contracts/agent-registry/src/: lib.rs  main.rs
dashboard/: index.html  pay.mjs
docs/: DECISIONS.md  DEPLOY-TESTNET.md
scripts/: build-contract.sh  testnet-deploy.sh
