[package]
name    = "agent-registry"
version = "0.1.0"
edition = "2021"

[[bin]]
name    = "agent-registry"
path    = "src/main.rs"
bench   = false
doctest = false
test    = false

[dependencies]
casper-contract = "=5.1.1"
casper-types    = "=6.0.1"

# Held at pre-edition2024 releases so the tree resolves on the pinned
# nightly (see rust-toolchain.toml). Newer versions need Rust 1.85+.
base64ct = "=1.6.0"
zeroize  = "=1.8.1"

[profile.release]
codegen-units   = 1
lto             = true
opt-level       = "z"
panic           = "abort"
overflow-checks = true
